--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@
 
 *:focus, *:focus-visible {
     border-radius: inherit;
+    background: inherit;
     outline: var(--base-line);
     outline-color: var(--border-tertiary-default);
     -webkit-transition: var(--base-transition);
@@ -141,6 +142,10 @@
 
 html {
     scroll-behavior: smooth;
+    -webkit-text-size-adjust: 100%;
+       -moz-text-size-adjust: 100%;
+        -ms-text-size-adjust: 100%;
+            text-size-adjust: 100%;
 }
 
 body {
@@ -185,6 +190,9 @@ a, button {
     cursor: pointer;
     font-size: inherit;
     font-weight: inherit;
+    letter-spacing: inherit;
+    line-height: inherit;
+    font-style: inherit;
     white-space: nowrap;
 }
 
@@ -212,6 +220,9 @@ button {
     letter-spacing: var(--letter-spacing-none);
     line-height: 135%;
     font-style: normal;
+}
+
+.big-title-margin {
     margin: 2rem 0rem 1.5rem 0rem;
 }
 
@@ -221,6 +232,9 @@ button {
     letter-spacing: var(--letter-spacing-medium);
     line-height: 135%;
     font-style: normal;
+}
+
+.basic-title-margin {
     margin: 2rem 0rem 1.5rem 0rem;
 }
 
@@ -230,6 +244,9 @@ button {
     letter-spacing: var(--letter-spacing-none);
     line-height: 135%;
     font-style: normal;
+}
+
+.small-title-margin {
     margin: 1rem 0rem 0.5rem 0rem;
 }
 
@@ -239,6 +256,9 @@ button {
     letter-spacing: var(--letter-spacing-small);
     line-height: 135%;
     font-style: normal;
+}
+
+.big-subtitle-margin {
     margin: 2.5rem 0rem 0.5rem 0rem;
 }
 
@@ -248,6 +268,9 @@ button {
     letter-spacing: var(--letter-spacing-small);
     line-height: 150%;
     font-style: normal;
+}
+
+.basic-subtitle-margin {
     margin: 1rem 0rem 0.5rem 0rem;
 }
 
@@ -257,8 +280,12 @@ button {
     letter-spacing: var(--letter-spacing-big);
     line-height: 150%;
     font-style: normal;
+}
+
+.basic-paragraph-margin {
     margin: 0rem 0rem 1rem 0rem;
 }
+
 
 .small-paragraph {
     font-size: var(--font-size-small);
@@ -271,10 +298,17 @@ button {
 h1, h2, h3, h4, h5, p {
     width: auto;
     max-width: 100%;
+    font-size: inherit;
+    font-weight: inherit;
+    letter-spacing: inherit;
+    line-height: inherit;
+    font-style: inherit;
 }
 
 i, b {
     font-size: inherit;
+    letter-spacing: inherit;
+    line-height: inherit;
     color: inherit;
 }
 
@@ -406,7 +440,6 @@ input:checked + .slider:before {
 }
 
 .item-list {
-    font-size: var(--font-size-basic);
     line-height: 200%;
 }
 
@@ -445,7 +478,6 @@ input:checked + .slider:before {
     border: var(--thin-line);
     border-color: var(--border-accent-default);
     border-radius: 0.25rem;
-    font-size: var(--font-size-basic);
     color: var(--content-accent-default);
     list-style-type: none;
     white-space: nowrap;
@@ -575,12 +607,23 @@ dialog .container {
         -ms-flex-pack: start;
             justify-content: flex-start;
     overflow: auto;
+    margin: 1rem 0rem;
 }
 
 dialog[open] {
-    border-radius: 1rem;
+    border-radius: 1.5rem;
     -webkit-animation: dialog-fade-in .2s cubic-bezier(0.4, 0, 0.4, 1) forwards;
             animation: dialog-fade-in .2s cubic-bezier(0.4, 0, 0.4, 1) forwards;
+}
+
+.handler {
+    display: none;
+    align-self: center;
+    width: 4rem;
+    height: 0.5rem;
+    background-color: var(--border-secondary-default);
+    border-radius: 2rem;
+    margin-bottom: 2rem;
 }
 
 dialog {
@@ -840,13 +883,17 @@ section:nth-child(n+2):not(:last-child) article {
         width: 100%;
     }
 
+    .handler {
+        display: block;
+    }
+
     dialog {
         margin: auto 0 0 0;
-        padding: 2rem 1rem;
+        padding: 0.5rem 2rem 2rem 2rem;
     }
 
     dialog[open] {
-        border-radius: 1rem 1rem 0rem 0rem;
+        border-radius: 1.5rem 1.5rem 0rem 0rem;
     }
 }
 
