--- a/style.css
+++ b/style.css
@@ -505,6 +505,7 @@ input:checked + .slider:before {
 /*List*/
 .list {
     padding-left: 2rem;
+    border-radius: 0rem;
 }
 
 .item-list {
@@ -673,22 +674,19 @@ section {
 }
 
 /*Dialog*/
-dialog .container {
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+dialog.container {
+    width: calc(100% - 8rem);
+    max-width: 800px;
+    gap: 1rem;
+    min-height: 18rem;
+}
+
+dialog .list {
     overflow: auto;
 }
 
-dialog .item-list:first-child {
-    margin-top: 0rem;
-}
-
-dialog .big-subtitle {
-    margin: 0;
+dialog .item-list:last-child {
+    margin-bottom: 1rem;
 }
 
 dialog[open] {
@@ -698,36 +696,11 @@ dialog[open] {
 }
 
 dialog {
-    -ms-flex-negative: 0;
-        flex-shrink: 0;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-        justify-content: center;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    gap: 1rem;
-    width: calc(100% - 4rem);
-    max-width: 800px;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-    min-height: 12rem;
-    max-height: calc(100% - 2rem);
     background-color: var(--background-primary-default);
     color: inherit;
     margin: auto;
     border: none;
     padding: 4rem 3rem 3rem 3rem;
-    -webkit-user-select: text;
-       -moz-user-select: text;
-        -ms-user-select: text;
-            user-select: text;
-    visibility: visible;
     overflow: hidden;
     -webkit-box-shadow: 2px 2px 40px 0px var(--overlay-primary-final-default);
        -moz-box-shadow: 2px 2px 40px 0px var(--overlay-primary-final-default);
@@ -946,7 +919,7 @@ section:nth-child(n+2):not(:last-child) article {
         max-width: 1400px;
     }
 
-    dialog {
+    dialog.container {
         max-width: 1000px;
     }
 }
@@ -989,7 +962,7 @@ section:nth-child(n+2):not(:last-child) article {
         padding-left: 1.5rem;
     }
 
-    dialog {
+    dialog.container {
         width: 100%;
         margin: auto 0 0 0;
         padding: 3rem 2rem 2rem 2rem;
