--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@
 
     /*lightmode-background-colors*/
     --background-primary-default: #fffafb;
+    --background-primary-hover: #f2e8eb;
     --background-secondary-default: #f2e8eb;
     --background-secondary-hover: #d2c6c9;
 
@@ -134,6 +135,7 @@
 
     /*darkmode-background-colors*/
     --background-primary-default: #160d10;
+    --background-primary-hover: #2D2023;
     --background-secondary-default: #2D2023;
     --background-secondary-hover: #392D30;
 
@@ -702,9 +704,9 @@ dialog {
     border: none;
     padding: 4rem 3rem 3rem 3rem;
     overflow: hidden;
-    -webkit-box-shadow: 2px 2px 40px 0px var(--overlay-primary-final-default);
-       -moz-box-shadow: 2px 2px 40px 0px var(--overlay-primary-final-default);
-            box-shadow: 2px 2px 40px 0px var(--overlay-primary-final-default);
+    -webkit-box-shadow: 0.125rem 0.125rem 2.5rem 0rem var(--overlay-primary-final-default);
+       -moz-box-shadow: 0.125rem 0.125rem 2.5rem 0rem var(--overlay-primary-final-default);
+            box-shadow: 0.125rem 0.125rem 2.5rem 0rem var(--overlay-primary-final-default);
     -webkit-transition: var(--base-transition) allow-discrete;
     -o-transition: var(--base-transition) allow-discrete;
     transition: var(--base-transition) allow-discrete;
@@ -891,6 +893,23 @@ section:nth-child(n+2):not(:last-child) article {
     .copy-button:hover {
         background: var(--background-secondary-hover);
         color: var(--content-action-hover);
+    }
+
+    .slider:hover {
+        background-color: var(--background-accent-hover);
+    }
+        
+    .slider:hover::before {
+        transform: scale(1.1);
+    }
+
+
+    input:checked + .slider:hover {
+        background-color: var(--background-accent-hover);
+    }
+
+    input:checked + .slider:hover::before {
+        transform: translateX(2rem) scale(1.1);
     }
 }
 
