--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@
     --yloria-02: #BFBBBB;
     --yloria-03: #ABA6A6;
     --yloria-04: #6D686A;
-    --orbis-01: #0F0003;
+    --orbis-01: #160D10;
     --orbis-02: #2D2023;
     --orbis-03: #392D30;
     --orbis-04: #6D686A;
