--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
 /* Scrollbar Styling*/
 @supports (-webkit-appearance: none) {
     ::-webkit-scrollbar {
-        width: 20px;
+        width: 1.5rem;
     }
 
     ::-webkit-scrollbar-track {
@@ -72,7 +72,7 @@
     ::-webkit-scrollbar-thumb {
         cursor: pointer;
         border-radius: 2rem;
-        border: solid 4px var(--background-secondary-default);
+        border: solid 0.25rem var(--background-secondary-default);
         background: var(--content-secondary-default);
     }
 }
