--- a/style.css
+++ b/style.css
@@ -723,13 +723,18 @@ section {
             flex-direction: column;
     top:2.5rem;
     right:0;
+    opacity: 0;
+    transform: translateY(-10px);
+    transition: var(--base-transition);
 }
+
+.show {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 
 .lang-list li {
     margin-top: 0.5rem;
-}
-
-.lang-list li {
     list-style-type: none;
 }
 
