--- a/style.css
+++ b/style.css
@@ -738,6 +738,24 @@ section {
     list-style-type: none;
 }
 
+/*Progress bar*/
+.progressBar {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0.25rem;
+    background-color: var(--background-secondary-default);
+    z-index: 1000;
+}
+
+.bar {
+    width: 0%;
+    height: 100%;
+    background-color: var(--background-accent-default);
+}
+
 /*Dialog*/
 .data-dialog.container {
     width: calc(100% - 8rem);
@@ -977,6 +995,10 @@ section:nth-child(n+2):not(:last-child) article {
 
     input:checked + .slider:hover::before {
         transform: translateX(2rem) scale(1.1);
+    }
+    
+    .progressBar {
+        display: none;
     }
 }
 
